# s32k144evb-quickstart

./: Cargo.toml  README.md
src/: lib.rs  main.rs
